# janitorrust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: builders.rs  config.rs  format.rs  main.rs  util.rs
src/broadcast/: admin.rs  broadcast.rs  broadcast_handler.rs  listener.rs  mod.rs  moderate.rs  send.rs  webhooks.rs
src/commands/: adminconfig.rs  adminlist.rs  badactor.rs  config.rs  mod.rs  scores.rs  user.rs
src/database/: admin_model_controller.rs  badactor_model_controller.rs  migrate.rs  mod.rs  scores_model_controller.rs  serverconfig_model_controller.rs  user_model_controller.rs
src/database/controllers/: admin_model_controller.rs  badactor_model_controller.rs  scores_model_controller.rs  serverconfig_model_controller.rs  user_model_controller.rs
src/database/migrations/: 20240303_init.sql  20240314_update.sql  20240329_scores.sql  20240502_remove_timeout.sql  20240518_init.sql  20240526_honeypot.sql
src/honeypot/: channels.rs  message.rs  mod.rs
src/moderation/: interaction.rs
src/util/: broadcast.rs  builders.rs  config.rs  discord.rs  embeds.rs  error.rs  format.rs  locks.rs  logger.rs  macros.rs  mod.rs  parsing.rs  permissions.rs  random_utils.rs  screenshot.rs
