[package]
name = "janitorrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
poise = "0.6.1"
serde_json = "1.0.115"
serenity = { version = "0.12", features = [
    "simd-json",
    "dashmap",
    "collector",
    "cache",
    "framework",
    "client"
] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "chrono",
] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.37", features = ["serde"] }
simd-json = "0.13"
dashmap = "5.5"
futures = "0.3.30"
url = { version = "2.5.0", features = ["serde"] }
